@@ -5,13 +5,11 @@ import net.minecraftforge.client.extensions.common.IClientItemExtensions;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import net.minecraftforge.api.distmarker.Dist;
 
-import net.minecraft.world.level.Level;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ArmorMaterial;
 import net.minecraft.world.item.ArmorItem;
-import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.Entity;
@@ -21,15 +19,11 @@ import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.Minecraft;
 
-import net.mcreator.fnafmod.procedures.SpringlockedProcedure;
-import net.mcreator.fnafmod.client.model.ModelSpringBonnieBody;
-import net.mcreator.fnafmod.client.model.ModelChicaMask;
+import net.mcreator.fnafmod.client.model.ModelChicaSuit;
 
 import java.util.function.Consumer;
 import java.util.Map;
 import java.util.Collections;
-
-import com.google.common.collect.Iterables;
 
 public abstract class ChicaSuitItem extends ArmorItem {
 	public ChicaSuitItem(ArmorItem.Type type, Item.Properties properties) {
@@ -87,7 +81,7 @@ public abstract class ChicaSuitItem extends ArmorItem {
 				@Override
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("head", new ModelChicaMask(Minecraft.getInstance().getEntityModels().bakeLayer(ModelChicaMask.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
+							Map.of("head", new ModelChicaSuit(Minecraft.getInstance().getEntityModels().bakeLayer(ModelChicaSuit.LAYER_LOCATION)).Chica_Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
@@ -101,15 +95,7 @@ public abstract class ChicaSuitItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "fnaf_mod:textures/entities/chica_head.png";
-		}
-
-		@Override
-		public void inventoryTick(ItemStack itemstack, Level world, Entity entity, int slot, boolean selected) {
-			super.inventoryTick(itemstack, world, entity, slot, selected);
-			if (entity instanceof Player player && Iterables.contains(player.getArmorSlots(), itemstack)) {
-				SpringlockedProcedure.execute(entity);
-			}
+			return "fnaf_mod:textures/entities/chicasuit.png";
 		}
 	}
 
@@ -124,9 +110,9 @@ public abstract class ChicaSuitItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new ModelSpringBonnieBody(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpringBonnieBody.LAYER_LOCATION)).Body,
-							"left_arm", new ModelSpringBonnieBody(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpringBonnieBody.LAYER_LOCATION)).LeftArm, "right_arm",
-							new ModelSpringBonnieBody(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpringBonnieBody.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new ModelChicaSuit(Minecraft.getInstance().getEntityModels().bakeLayer(ModelChicaSuit.LAYER_LOCATION)).Body, "left_arm",
+							new ModelChicaSuit(Minecraft.getInstance().getEntityModels().bakeLayer(ModelChicaSuit.LAYER_LOCATION)).LeftArm, "right_arm",
+							new ModelChicaSuit(Minecraft.getInstance().getEntityModels().bakeLayer(ModelChicaSuit.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
@@ -138,15 +124,7 @@ public abstract class ChicaSuitItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "fnaf_mod:textures/entities/chica_layer_1.png";
-		}
-
-		@Override
-		public void inventoryTick(ItemStack itemstack, Level world, Entity entity, int slot, boolean selected) {
-			super.inventoryTick(itemstack, world, entity, slot, selected);
-			if (entity instanceof Player player && Iterables.contains(player.getArmorSlots(), itemstack)) {
-				SpringlockedProcedure.execute(entity);
-			}
+			return "fnaf_mod:textures/entities/chicasuit.png";
 		}
 	}
 
@@ -156,16 +134,27 @@ public abstract class ChicaSuitItem extends ArmorItem {
 		}
 
 		@Override
-		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "fnaf_mod:textures/entities/chica_layer_2.png";
+		public void initializeClient(Consumer<IClientItemExtensions> consumer) {
+			consumer.accept(new IClientItemExtensions() {
+				@Override
+				@OnlyIn(Dist.CLIENT)
+				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+							Map.of("left_leg", new ModelChicaSuit(Minecraft.getInstance().getEntityModels().bakeLayer(ModelChicaSuit.LAYER_LOCATION)).LeftLeg, "right_leg",
+									new ModelChicaSuit(Minecraft.getInstance().getEntityModels().bakeLayer(ModelChicaSuit.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+					armorModel.crouching = living.isShiftKeyDown();
+					armorModel.riding = defaultModel.riding;
+					armorModel.young = living.isBaby();
+					return armorModel;
+				}
+			});
 		}
 
 		@Override
-		public void inventoryTick(ItemStack itemstack, Level world, Entity entity, int slot, boolean selected) {
-			super.inventoryTick(itemstack, world, entity, slot, selected);
-			if (entity instanceof Player player && Iterables.contains(player.getArmorSlots(), itemstack)) {
-				SpringlockedProcedure.execute(entity);
-			}
+		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
+			return "fnaf_mod:textures/entities/chicasuit.png";
 		}
 	}
 
@@ -175,16 +164,27 @@ public abstract class ChicaSuitItem extends ArmorItem {
 		}
 
 		@Override
-		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "fnaf_mod:textures/entities/chica_layer_1.png";
+		public void initializeClient(Consumer<IClientItemExtensions> consumer) {
+			consumer.accept(new IClientItemExtensions() {
+				@Override
+				@OnlyIn(Dist.CLIENT)
+				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+							Map.of("left_leg", new ModelChicaSuit(Minecraft.getInstance().getEntityModels().bakeLayer(ModelChicaSuit.LAYER_LOCATION)).LeftBoot, "right_leg",
+									new ModelChicaSuit(Minecraft.getInstance().getEntityModels().bakeLayer(ModelChicaSuit.LAYER_LOCATION)).RightBoot, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+					armorModel.crouching = living.isShiftKeyDown();
+					armorModel.riding = defaultModel.riding;
+					armorModel.young = living.isBaby();
+					return armorModel;
+				}
+			});
 		}
 
 		@Override
-		public void inventoryTick(ItemStack itemstack, Level world, Entity entity, int slot, boolean selected) {
-			super.inventoryTick(itemstack, world, entity, slot, selected);
-			if (entity instanceof Player player && Iterables.contains(player.getArmorSlots(), itemstack)) {
-				SpringlockedProcedure.execute(entity);
-			}
+		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
+			return "fnaf_mod:textures/entities/chicasuit.png";
 		}
 	}
 }
